--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <!-- nava bar start -->
-    <section id="header">
+
+     <!-- <section id="header">
         <a href="#"><img src="imgaes/logo.png" class="logo" alt="logo"></a>
         <div>
             <ul id="navbar">
@@ -22,7 +23,7 @@
                 <li><a href="blog.html">blog</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="contact.html">contact</a></li>
-                <!-- <button id="dark-mood">dark</button> -->
+                <button id="dark-mood">dark</button>  سوف يتم ايقافها 
                 <button id="login-button" class="normal">
                     <li><a class="active" href="index.html">LOGIN</a></li>
                 </button>
@@ -31,10 +32,10 @@
         </div>
         <div class="mobile">
             <a href="cart.ttml"><i class="fa-solid fa-cart-shopping"></i></a>
-            <!-- <li><a class="active" href="login.html">LOGIN</a></li> -->
+            <li><a class="active" href="login.html">LOGIN</a></li>  سوف يتم ايقافها  
             <i id="bar" class="fas fa-outdent"></i>
         </div>
-    </section>
+    </section>  -->
 
     <!-- nava bar end-->
 
@@ -58,7 +59,7 @@
     </section>
 
     <!-- footer start -->
-    <footer class="section-p1">
+    <!-- <footer class="section-p1">
         <div class="row">
             <div class="col">
                 <a class="logo" href="index.html"><img src="imgaes/logo.png" alt="logo"></a>
@@ -110,7 +111,7 @@
         <div class="copyright">
             <p> All rights reserved by || Walid Othman </p>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- footer end -->
 
