--- a/singup.html
+++ b/singup.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- nava bar start -->
-    <section id="header">
+    <!-- <section id="header">
         <a href="#"><img src="imgaes/logo.png" class="logo" alt="logo"></a>
         <div>
             <ul id="navbar">
@@ -28,10 +28,10 @@
         </div>
         <div class="mobile">
             <a href="cart.ttml"><i class="fa-solid fa-cart-shopping"></i></a>
-            <!-- <li><a class="active" href="login.html">LOGIN</a></li> -->
+           <li><a class="active" href="login.html">LOGIN</a></li> سيتم ايقافها 
             <i id="bar" class="fas fa-outdent"></i>
         </div>
-    </section>
+    </section> -->
 
     <!-- nava bar end-->
 
@@ -57,7 +57,7 @@
     </section>
 
     <!-- footer start -->
-    <footer class="section-p1">
+    <!-- <footer class="section-p1">
         <div class="row">
             <div class="col">
                 <a class="logo" href="index.html"><img src="imgaes/logo.png" alt="logo"></a>
@@ -109,7 +109,7 @@
         <div class="copyright">
             <p> All rights reserved by || Walid Othman </p>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- footer end -->
 
