--- a/singup.html
+++ b/singup.html
@@ -52,6 +52,7 @@
             <input type="email" id="singup-email" placeholder="Enter email">
             <input type="password" id="singup-password" placeholder="Enter password">
             <button class="normal" type="submit">Submit</button>
+            <button class="edit" type="button" id="show-password">🙈</button>
         </form>
         <p>Do you have an account? <a href="index.html">LOGIN</a></p>
     </section>
