--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <input type="email" id="email" placeholder="Enter your email">
             <input type="password" id="password" placeholder="Enter your password">
             <button class="normal" type="submit">Submit</button>
-            <button type="button" id="show-password">🙈</button>
+            <button type="button" id="show-password">👁‍🗨</button>
         </form>
         <p>Don't have an account? <a href="singup.html">Sign Up</a></p>
     </section>
