--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="mobile"> 
-            <a href="cart.ttml"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
              <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
@@ -93,6 +93,7 @@
         <div class="cards">
             <div class="card">
                 <img src="imgaes/products/f1.jpg" alt="">
+                
                 <div class="card-body">
                     <span>adidas</span>
                     <h5>Cortoon Astronout T-Shirts</h5>
