--- a/singlproduct.html
+++ b/singlproduct.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="mobile">
-            <a href="cart.ttml"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
